--- a/style.css
+++ b/style.css
@@ -17,18 +17,17 @@
 
 body{
     background-color: var(--background);
-    width: 1092px;
-    margin: auto;
     font-size: 16px;
     color: var(--fonts);
     font-family: 'Open Sans', sans-serif;
 }
 
 nav{
+    width: 1092px;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin-top: 71px;
+    margin: 71px auto 0;
 }
 
 ul{
@@ -43,6 +42,10 @@ ul a{
     font-weight: 500;
     font-size: 14px;
     line-height: 28px;
+}
+
+ul a:hover{
+    color: var(--destaques)
 }
 
 /* MAIN */
@@ -88,17 +91,22 @@ a, h1{
 
 /* footer */
 
+footer{
+    margin-bottom: 23px;
+}
+
 footer p{
     font-size: 14px;
     text-align: center;
     font-weight: 500;
     line-height: 28px;
+    color: var(--branco);
 }
 
 #border{
-    border-top: 1px solid var(--destaques);
+    border-top: 2px solid var(--destaques);
     width: 560px;
-    margin: 0 auto 20px;
+    margin: 0 auto 27px;
 }
 
 footer img{
